--- a/src/main/resources/templates/auth/signin.html
+++ b/src/main/resources/templates/auth/signin.html
@@ -124,7 +124,7 @@
   };
 
   if (document.cookie.includes("AUTH_TOKEN")) {
-    window.location.href = "/view/home";
+    window.location.href = "/user/view/dashboard";
   }
 
   document.addEventListener("DOMContentLoaded", () => {
