--- a/src/main/resources/templates/pm/project-performance.html
+++ b/src/main/resources/templates/pm/project-performance.html
@@ -236,4 +236,7 @@
 
 </script>
 </body>
+
+<div th:replace="fragments/chatbox :: chatbox"></div>
+<script th:src="@{/js/chatbox.js}"></script>
 </html>
