--- a/src/main/resources/templates/user/user-task.html
+++ b/src/main/resources/templates/user/user-task.html
@@ -148,4 +148,7 @@
 </div>
 
 </body>
+
+<div th:replace="fragments/chatbox :: chatbox"></div>
+<script th:src="@{/js/chatbox.js}"></script>
 </html>
