--- a/src/main/resources/templates/pm/project-members.html
+++ b/src/main/resources/templates/pm/project-members.html
@@ -273,4 +273,7 @@
     });
 </script>
 </body>
+
+<div th:replace="fragments/chatbox :: chatbox"></div>
+<script th:src="@{/js/chatbox.js}"></script>
 </html>
