--- a/src/main/resources/templates/pm/project-task-review.html
+++ b/src/main/resources/templates/pm/project-task-review.html
@@ -276,4 +276,7 @@
     document.addEventListener("DOMContentLoaded", loadTasks);
 </script>
 </body>
+
+<div th:replace="fragments/chatbox :: chatbox"></div>
+<script th:src="@{/js/chatbox.js}"></script>
 </html>
